<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:weightSum="1"
    android:theme="@style/Theme.AppCompat.Light"
    >

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/ivCouverture"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:contentDescription="@string/couverture"
            app:srcCompat="@drawable/logo" />

        <EditText
            android:id="@+id/etISBN"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/isbn"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etTitre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/titre"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etAuteur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/auteur"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etEditeur"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/editeur"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etDatePub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/date_de_publication"
            android:inputType="" />

        <EditText
            android:id="@+id/etResume"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/resume"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal">
            android:layout_marginBottom="5dp"

            <TextView
                android:id="@+id/tvLabelType"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:paddingLeft="3dp"
                android:text="Type"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/sType"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:id="@+id/rgLu">

            <TextView
                android:id="@+id/textView2"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.81"
                android:ems="10"
                android:paddingLeft="3dp"
                android:text="Etat d'avancement:"
                android:textSize="18sp" />

            <RadioButton android:id="@+id/rbLu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Lu" />
            <RadioButton android:id="@+id/rbNonLu"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Non lu" />
            <RadioButton android:id="@+id/rbEnCours"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="En cours" />
        </RadioGroup>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:id="@+id/rgPret">>

            <TextView
                android:id="@+id/tvStatutPreteLabel"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.81"
                android:ems="10"
                android:paddingLeft="3dp"
                android:text="Actuellement prêté:"
                android:textSize="18sp" />
            <RadioButton android:id="@+id/rbPrete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Oui" />
            <RadioButton android:id="@+id/rbNonPrete"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Non" />
        </RadioGroup>

        <EditText
            android:id="@+id/etCategorie"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/categorie"
            android:inputType="textPersonName" />

        <EditText
            android:id="@+id/etLangue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/langue"
            android:inputType="textPersonName" />

        <RatingBar
            android:id="@+id/rbNote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:elevation="1dp"
            android:numStars="5" />

        <EditText
            android:id="@+id/etAvis"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:ems="10"
            android:hint="@string/avis"
            android:inputType="textPersonName" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="horizontal"
            android:layout_marginBottom="5dp">

            <TextView
                android:id="@+id/tvLabelCollection"
                android:layout_width="119dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="5dp"
                android:ems="10"
                android:paddingLeft="3dp"
                android:text="Collection"
                android:textSize="18sp" />

            <Spinner
                android:id="@+id/sCollection"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginBottom="15dp"
            android:id="@+id/rgWishlist">>

            <TextView
                android:id="@+id/tvStatutWishlist"
                android:layout_width="60dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_weight="0.81"
                android:ems="10"
                android:paddingLeft="3dp"
                android:text="Ajouter dans ma Wishlist:"
                android:textSize="18sp" />

            <RadioButton android:id="@+id/rbWishlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Oui" />
            <RadioButton android:id="@+id/rbNonWishlist"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Non" />
        </RadioGroup>

        <Button
            android:id="@+id/bAjout"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/btnBackground"
            android:text="@string/modifier"
            android:textColor="@color/textColor" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>