<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_accueil"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alice.biblothequevirtuelle.Vue.Accueil"
    android:background="@color/fond"
    android:paddingTop="10dp">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:id="@+id/ivLogo"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:contentDescription="@string/logoappli"
                app:srcCompat="@drawable/logo"
                android:layout_alignParentTop="true"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="10dp"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/ivLogo"
                android:adjustViewBounds="true"
                app:srcCompat="@drawable/biblioaccueil"
                tools:textColor="#533312" />

            <Button
                android:id="@+id/bScanner"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/imageView"
                android:layout_marginBottom="2dp"
                android:background="@color/btnBackground"
                android:onClick="onClickAjouter"
                android:text="@string/scanner"
                android:textColor="@color/textColor" />

            <Button
                android:id="@+id/button_Rech"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/bScanner"
                android:layout_marginBottom="2dp"
                android:background="@color/btnBackground"
                android:onClick="search"
                android:text="Rechercher"
                android:textColor="@color/textColor" />

            <Button
                android:id="@+id/bLivres"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/button_Rech"
                android:layout_marginBottom="2dp"
                android:background="@color/btnBackground"
                android:text="@string/livres"
                android:textAppearance="@style/TextAppearance.AppCompat.Button"
                android:textColor="@color/textColor" />

            <Button
                android:id="@+id/bCollections"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/bLivres"
                android:layout_marginBottom="2dp"
                android:background="@color/btnBackground"
                android:text="@string/collections"
                android:textColor="@color/textColor" />

            <Button
                android:id="@+id/bWishlist"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/bCollections"
                android:layout_marginBottom="2dp"
                android:background="@color/btnBackground"
                android:text="@string/Wishlist"
                android:textColor="@color/textColor" />

            <Button
                android:id="@+id/bCompte"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_alignParentLeft="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/bWishlist"
                android:layout_marginBottom="2dp"
                android:background="@color/btnBackground"
                android:text="@string/compte"
                android:textColor="@color/textColor" />

            <Button
                android:id="@+id/bdeconnexion"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/deconnexion"
                android:background="@color/btnBackgroundDeco"
                android:textColor="@color/textColor"
                style="?android:attr/borderlessButtonStyle"
                android:layout_below="@+id/bCompte"
                android:layout_alignParentLeft="true"
                android:layout_alignParentStart="true"
                android:layout_alignParentRight="true"
                android:layout_alignParentEnd="true" />

        </LinearLayout>
    </ScrollView>
</RelativeLayout>
