<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.alice.biblothequevirtuelle.Vue.MesLivres">

    <TextView
        android:id="@+id/tvMeslivres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:text="@string/mes_livres"
        android:textAlignment="center"
        android:textSize="30sp"
        android:textStyle="bold"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp" />

    <Button
        android:id="@+id/btnTriTitre"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickTriTitre"
        android:text="Trier par titre"
        android:layout_marginStart="29dp"
        android:background="@color/btnBackground"
        android:textColor="@color/textColor"
        android:layout_marginTop="28dp"
        android:layout_below="@+id/actvEditeur"
        android:layout_alignParentStart="true" />

    <Button
        android:id="@+id/btnTriAuteur"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickTriAuteur"
        android:text="Trier par auteur"
        android:layout_marginEnd="28dp"
        android:background="@color/btnBackground"
        android:textColor="@color/textColor"
        android:layout_alignBaseline="@+id/btnTriTitre"
        android:layout_alignBottom="@+id/btnTriTitre"
        android:layout_alignParentEnd="true" />

    <AutoCompleteTextView
        android:id="@+id/actvAuteur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/auteur"
        android:layout_alignTop="@+id/tvMeslivres"
        android:layout_alignParentStart="true"
        android:layout_marginTop="34dp"
        android:layout_toStartOf="@+id/btnChercherEditeur" />

    <AutoCompleteTextView
        android:id="@+id/actvEditeur"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:hint="@string/editeur"
        android:layout_below="@+id/actvAuteur"
        android:layout_alignParentStart="true"
        android:layout_marginTop="14dp"
        android:layout_toStartOf="@+id/btnChercherEditeur" />

    <ListView
        android:id="@+id/lvMeslivres"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintRight_toRightOf="parent"
        tools:layout_editor_absoluteY="24dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/btnTriAuteur" />

    <Button
        android:id="@+id/btnChercherEditeur"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="onClickhercherEditeur"
        android:text="Filtrer"
        android:background="@color/btnBackground"
        android:textColor="@color/textColor"
        android:layout_alignBottom="@+id/actvEditeur"
        android:layout_alignParentEnd="true" />

    <Button
        android:id="@+id/btnChercherAuteur"
        style="?android:attr/borderlessButtonStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/actvEditeur"
        android:layout_alignParentEnd="true"
        android:text="Flitrer"
        android:onClick="onClickTriChercherAuteur"
        android:background="@color/btnBackground"
        android:textColor="@color/textColor" />

</RelativeLayout>
